Annotation with GWAS p-value fails

--- a/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
+++ b/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -53,14 +53,16 @@
       "                        (/home/attila/projects/bsm/results/calls/)\n",
       "  -l VCFLIST, --vcflist VCFLIST\n",
       "                        list of samples and VCF files\n",
-      "                        (/big/results/bsm/calls/filtered-vcfs.tsv)\n"
+      "                        (/big/results/bsm/calls/filtered-vcfs.tsv)\n",
+      "Welcome, Attila Jones!\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "~/projects/bsm/src/readVCF.py -h\n",
-    "if false; then\n",
+    "if true; then\n",
     "# run script with default options\n",
     "~/projects/bsm/src/readVCF.py\n",
     "fi"
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -131,332 +133,20 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>43788142</td>\n",
-       "      <td>C</td>\n",
-       "      <td>A</td>\n",
-       "      <td>227.40</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MSSM_172</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.019706</td>\n",
-       "      <td>-0.075140</td>\n",
-       "      <td>0.003492</td>\n",
-       "      <td>-0.015932</td>\n",
-       "      <td>-0.006081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>82063741</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>71.18</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MSSM_172</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.019706</td>\n",
-       "      <td>-0.075140</td>\n",
-       "      <td>0.003492</td>\n",
-       "      <td>-0.015932</td>\n",
-       "      <td>-0.006081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>166060224</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>73.68</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MSSM_172</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.019706</td>\n",
-       "      <td>-0.075140</td>\n",
-       "      <td>0.003492</td>\n",
-       "      <td>-0.015932</td>\n",
-       "      <td>-0.006081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>283678</td>\n",
-       "      <td>C</td>\n",
-       "      <td>A</td>\n",
-       "      <td>100.99</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MSSM_172</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.019706</td>\n",
-       "      <td>-0.075140</td>\n",
-       "      <td>0.003492</td>\n",
-       "      <td>-0.015932</td>\n",
-       "      <td>-0.006081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>99427525</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>101.86</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>MSSM_172</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.019706</td>\n",
-       "      <td>-0.075140</td>\n",
-       "      <td>0.003492</td>\n",
-       "      <td>-0.015932</td>\n",
-       "      <td>-0.006081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>19</td>\n",
-       "      <td>29600767</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>79.79</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PITT_917</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.021532</td>\n",
-       "      <td>0.004611</td>\n",
-       "      <td>0.001182</td>\n",
-       "      <td>0.035402</td>\n",
-       "      <td>-0.005080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>19</td>\n",
-       "      <td>58291104</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>77.85</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PITT_917</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.021532</td>\n",
-       "      <td>0.004611</td>\n",
-       "      <td>0.001182</td>\n",
-       "      <td>0.035402</td>\n",
-       "      <td>-0.005080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>X</td>\n",
-       "      <td>5889841</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1084.39</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PITT_917</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.021532</td>\n",
-       "      <td>0.004611</td>\n",
-       "      <td>0.001182</td>\n",
-       "      <td>0.035402</td>\n",
-       "      <td>-0.005080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>X</td>\n",
-       "      <td>71258041</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>99.85</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PITT_917</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.021532</td>\n",
-       "      <td>0.004611</td>\n",
-       "      <td>0.001182</td>\n",
-       "      <td>0.035402</td>\n",
-       "      <td>-0.005080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>X</td>\n",
-       "      <td>120533592</td>\n",
-       "      <td>C</td>\n",
-       "      <td>A</td>\n",
-       "      <td>91.24</td>\n",
-       "      <td>HC;PASS/PASS</td>\n",
-       "      <td>HC;PASS/HC</td>\n",
-       "      <td>HC;PASS/EXT</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PITT_917</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.021532</td>\n",
-       "      <td>0.004611</td>\n",
-       "      <td>0.001182</td>\n",
-       "      <td>0.035402</td>\n",
-       "      <td>-0.005080</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>410 rows × 124 columns</p>\n",
+       "<p>0 rows × 124 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   CHROM        POS REF ALT     QUAL   FILTER/PASS   FILTER/HC   FILTER/EXT  \\\n",
-       "0      1   43788142   C   A   227.40  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "1      1   82063741   C   T    71.18  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "2      1  166060224   G   A    73.68  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "3      2     283678   C   A   100.99  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "4      2   99427525   C   T   101.86  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "..   ...        ...  ..  ..      ...           ...         ...          ...   \n",
-       "37    19   29600767   C   T    79.79  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "38    19   58291104   C   T    77.85  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "39     X    5889841   G   A  1084.39  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "40     X   71258041   C   T    99.85  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
-       "41     X  120533592   C   A    91.24  HC;PASS/PASS  HC;PASS/HC  HC;PASS/EXT   \n",
+       "Empty DataFrame\n",
+       "Columns: [CHROM, POS, REF, ALT, QUAL, FILTER/PASS, FILTER/HC, FILTER/EXT, AC, AF, AN, BaseQRankSum, DP, DS, END, ExcessHet, FS, InbreedingCoeff, MLEAC, MLEAF, MQ, MQRankSum, NEGATIVE_TRAIN_SITE, POSITIVE_TRAIN_SITE, QD, RAW_MQandDP, ReadPosRankSum, SOR, VQSLOD, culprit, ChromatinState_DLPFC, SiPhyLOD, SiPhyBranchLen, szdbCNVcount, chromatinState_DLPFC, evolConstrain, Sample, Individual ID, Tissue, Individual Notes, Institution, Brain ID, SCZ Pair, BP Pair, Changed (used Affy phenotype), Reported Gender, Sex, Ethnicity, Race, Genotype Inferred Ancestry, ageOfDeath, Date of Death, Time of Death, Time of Death (Military), Autopsy ID, Brain Weight (in grams), PMI (in hours), pH, Dx, primaryDiagnosisDetail, Presence or Absence of Dementia (Y/N), CDR, Year of Autopsy, Neuropath, Neuropath desc, Gross Diagnosis, Benzodiazepines, Anticonvulsants, AntipsychTyp, AntipsychAtyp, Antidepress, Lithium, Tobacco, Tobacco (Past), Alcohol, Illicitsub, causeOfDeath, DescDeath, Hyperten, DiabetesInsDep, DiabetesNonInsDep, ECT, Seizures, Braak Stage, H/O Head Inj., H/O COPD, H/O Stroke, H/O PD.AD.LBD.Pick, Cardiovascular Disease, Lobotomy, BMI (Traditional), BMI (cm/kg), Height (cm), Weight (kg), Height (Inches), Weight (pounds), VExC, VexcText, Antipsychotic-Free (weeks), Source of Autopsy, ...]\n",
+       "Index: []\n",
        "\n",
-       "    AC    AF  ...  otherMedicalDetail  mannerOfDeath  PMICertain  \\\n",
-       "0    3  0.06  ...                 NaN            NaN         NaN   \n",
-       "1    1  0.02  ...                 NaN            NaN         NaN   \n",
-       "2    1  0.02  ...                 NaN            NaN         NaN   \n",
-       "3    2  0.04  ...                 NaN            NaN         NaN   \n",
-       "4    2  0.04  ...                 NaN            NaN         NaN   \n",
-       "..  ..   ...  ...                 ...            ...         ...   \n",
-       "37   1  0.02  ...                 NaN            NaN         NaN   \n",
-       "38   2  0.04  ...                 NaN            NaN         NaN   \n",
-       "39  10  0.20  ...                 NaN            NaN         NaN   \n",
-       "40   2  0.04  ...                 NaN            NaN         NaN   \n",
-       "41   1  0.02  ...                 NaN            NaN         NaN   \n",
-       "\n",
-       "    Genotyping_Sample_ID  Cluster      EV.1      EV.2      EV.3      EV.4  \\\n",
-       "0               MSSM_172        B  0.019706 -0.075140  0.003492 -0.015932   \n",
-       "1               MSSM_172        B  0.019706 -0.075140  0.003492 -0.015932   \n",
-       "2               MSSM_172        B  0.019706 -0.075140  0.003492 -0.015932   \n",
-       "3               MSSM_172        B  0.019706 -0.075140  0.003492 -0.015932   \n",
-       "4               MSSM_172        B  0.019706 -0.075140  0.003492 -0.015932   \n",
-       "..                   ...      ...       ...       ...       ...       ...   \n",
-       "37              PITT_917        E  0.021532  0.004611  0.001182  0.035402   \n",
-       "38              PITT_917        E  0.021532  0.004611  0.001182  0.035402   \n",
-       "39              PITT_917        E  0.021532  0.004611  0.001182  0.035402   \n",
-       "40              PITT_917        E  0.021532  0.004611  0.001182  0.035402   \n",
-       "41              PITT_917        E  0.021532  0.004611  0.001182  0.035402   \n",
-       "\n",
-       "        EV.5  \n",
-       "0  -0.006081  \n",
-       "1  -0.006081  \n",
-       "2  -0.006081  \n",
-       "3  -0.006081  \n",
-       "4  -0.006081  \n",
-       "..       ...  \n",
-       "37 -0.005080  \n",
-       "38 -0.005080  \n",
-       "39 -0.005080  \n",
-       "40 -0.005080  \n",
-       "41 -0.005080  \n",
-       "\n",
-       "[410 rows x 124 columns]"
+       "[0 rows x 124 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1814,13 +1504,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 57405,\n",
-      "  \"iopub_port\": 33875,\n",
-      "  \"stdin_port\": 60339,\n",
-      "  \"control_port\": 41655,\n",
-      "  \"hb_port\": 36959,\n",
+      "  \"shell_port\": 40469,\n",
+      "  \"iopub_port\": 55633,\n",
+      "  \"stdin_port\": 42381,\n",
+      "  \"control_port\": 43763,\n",
+      "  \"hb_port\": 41489,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"1d3f1cd4-a45c4abafd50b24363671cce\",\n",
+      "  \"key\": \"ee45d659-2ccd0dfd3efc86310c2fd999\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1829,7 +1519,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-fa89d798-23f2-4b9c-8773-85f38a2ec598.json\n",
+      "    $> jupyter <app> --existing kernel-6b20be3f-4473-4984-a053-1bd269029207.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
