--- a/notebook/2020-07-28-CLOZUK/2020-07-28-CLOZUK.ipynb
+++ b/notebook/2020-07-28-CLOZUK/2020-07-28-CLOZUK.ipynb
@@ -321,12 +321,321 @@
     "%%bash\n",
     "cd /home/attila/projects/bsm/resources/CLOZUK\n",
     "fai=/big/data/refgenome/GRCh37/dna/hs37d5.fa.fai\n",
-    "sed 's/^\\(\\S\\+\\t\\)\\(\\S\\+\\)\\t.*$/\\10\\t\\2/; /^Y/ q' $fai > genome.bed"
+    "# The genome.py module uses the bed file below\n",
+    "bed=/big/data/refgenome/GRCh37/dna/hs37d5.bed\n",
+    "sed 's/^\\(\\S\\+\\t\\)\\(\\S\\+\\)\\t.*$/\\10\\t\\2/; /^Y/ q' $fai > $bed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coord_cols = ['Chromosome', 'Start (BP)', 'End (BP)']\n",
+    "cgwas = genome.complement_intervals(gwas, coord_cols=coord_cols, onebased=True) # complemented gwas data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Locus</th>\n",
+       "      <th>GWS in PGC2?</th>\n",
+       "      <th>Chromosome</th>\n",
+       "      <th>Start (BP)</th>\n",
+       "      <th>End (BP)</th>\n",
+       "      <th>Index SNP (dbSNP b141)</th>\n",
+       "      <th>A1</th>\n",
+       "      <th>A2</th>\n",
+       "      <th>OR</th>\n",
+       "      <th>SE</th>\n",
+       "      <th>P-value</th>\n",
+       "      <th>Number of SNPs</th>\n",
+       "      <th>Length (KB)</th>\n",
+       "      <th>Gene(s) tagged</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2372395</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2372395</td>\n",
+       "      <td>2402499</td>\n",
+       "      <td>rs4648845</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>0.926</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>6.740000e-12</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>30.102</td>\n",
+       "      <td>PLCH2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2402499</td>\n",
+       "      <td>8392590</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8392590</td>\n",
+       "      <td>8701288</td>\n",
+       "      <td>rs34269918</td>\n",
+       "      <td>G</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>0.941</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>3.270000e-09</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>308.696</td>\n",
+       "      <td>RERE, SLC45A1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8701288</td>\n",
+       "      <td>30428941</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>X</td>\n",
+       "      <td>5859731</td>\n",
+       "      <td>6029533</td>\n",
+       "      <td>rs12009217</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0.937</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>1.780000e-10</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>169.801</td>\n",
+       "      <td>NLGN4X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>6029533</td>\n",
+       "      <td>68377124</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>X</td>\n",
+       "      <td>68377124</td>\n",
+       "      <td>68377205</td>\n",
+       "      <td>rs62606711</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>1.075</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>1.260000e-12</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.079</td>\n",
+       "      <td>PJA1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>X</td>\n",
+       "      <td>68377205</td>\n",
+       "      <td>155270560</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59373566</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>314 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Locus GWS in PGC2? Chromosome  Start (BP)   End (BP)  \\\n",
+       "0      NaN          NaN          1           0    2372395   \n",
+       "40    41.0          Yes          1     2372395    2402499   \n",
+       "1      NaN          NaN          1     2402499    8392590   \n",
+       "86    87.0          Yes          1     8392590    8701288   \n",
+       "2      NaN          NaN          1     8701288   30428941   \n",
+       "..     ...          ...        ...         ...        ...   \n",
+       "60    61.0          Yes          X     5859731    6029533   \n",
+       "166    NaN          NaN          X     6029533   68377124   \n",
+       "26    27.0          Yes          X    68377124   68377205   \n",
+       "167    NaN          NaN          X    68377205  155270560   \n",
+       "168    NaN          NaN          Y           0   59373566   \n",
+       "\n",
+       "    Index SNP (dbSNP b141)   A1   A2     OR     SE       P-value  \\\n",
+       "0                      NaN  NaN  NaN    NaN    NaN           NaN   \n",
+       "40               rs4648845    C    T  0.926  0.011  6.740000e-12   \n",
+       "1                      NaN  NaN  NaN    NaN    NaN           NaN   \n",
+       "86              rs34269918    G   GA  0.941  0.010  3.270000e-09   \n",
+       "2                      NaN  NaN  NaN    NaN    NaN           NaN   \n",
+       "..                     ...  ...  ...    ...    ...           ...   \n",
+       "60              rs12009217    A    G  0.937  0.010  1.780000e-10   \n",
+       "166                    NaN  NaN  NaN    NaN    NaN           NaN   \n",
+       "26              rs62606711    A    G  1.075  0.010  1.260000e-12   \n",
+       "167                    NaN  NaN  NaN    NaN    NaN           NaN   \n",
+       "168                    NaN  NaN  NaN    NaN    NaN           NaN   \n",
+       "\n",
+       "     Number of SNPs  Length (KB) Gene(s) tagged  \n",
+       "0               NaN          NaN            NaN  \n",
+       "40             27.0       30.102          PLCH2  \n",
+       "1               NaN          NaN            NaN  \n",
+       "86             56.0      308.696  RERE, SLC45A1  \n",
+       "2               NaN          NaN            NaN  \n",
+       "..              ...          ...            ...  \n",
+       "60             51.0      169.801         NLGN4X  \n",
+       "166             NaN          NaN            NaN  \n",
+       "26              4.0        0.079           PJA1  \n",
+       "167             NaN          NaN            NaN  \n",
+       "168             NaN          NaN            NaN  \n",
+       "\n",
+       "[314 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cgwas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bedpath = '/home/attila/projects/bsm/resources/CLOZUK/gwas.bed'\n",
+    "cgwas[coord_cols + ['P-value']].to_csv(bedpath, sep='\\t', header=False, index=False, na_rep='NA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
