--- a/notebook/2020-07-28-CLOZUK/2020-07-28-CLOZUK.ipynb
+++ b/notebook/2020-07-28-CLOZUK/2020-07-28-CLOZUK.ipynb
@@ -9,14 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%reload_ext autoreload\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import genome\n",
     "%matplotlib inline"
    ]
@@ -338,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -376,6 +386,7 @@
        "      <th>Number of SNPs</th>\n",
        "      <th>Length (KB)</th>\n",
        "      <th>Gene(s) tagged</th>\n",
+       "      <th>-log p-value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -386,6 +397,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>2372395</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -412,6 +424,7 @@
        "      <td>27.0</td>\n",
        "      <td>30.102</td>\n",
        "      <td>PLCH2</td>\n",
+       "      <td>11.171340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -420,6 +433,7 @@
        "      <td>1</td>\n",
        "      <td>2402499</td>\n",
        "      <td>8392590</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -446,6 +460,7 @@
        "      <td>56.0</td>\n",
        "      <td>308.696</td>\n",
        "      <td>RERE, SLC45A1</td>\n",
+       "      <td>8.485452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -463,9 +478,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -497,6 +514,7 @@
        "      <td>51.0</td>\n",
        "      <td>169.801</td>\n",
        "      <td>NLGN4X</td>\n",
+       "      <td>9.749580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>166</th>\n",
@@ -505,6 +523,7 @@
        "      <td>X</td>\n",
        "      <td>6029533</td>\n",
        "      <td>68377124</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -531,6 +550,7 @@
        "      <td>4.0</td>\n",
        "      <td>0.079</td>\n",
        "      <td>PJA1</td>\n",
+       "      <td>11.899629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>167</th>\n",
@@ -539,6 +559,7 @@
        "      <td>X</td>\n",
        "      <td>68377205</td>\n",
        "      <td>155270560</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -565,10 +586,11 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>314 rows × 14 columns</p>\n",
+       "<p>314 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -598,39 +620,40 @@
        "167                    NaN  NaN  NaN    NaN    NaN           NaN   \n",
        "168                    NaN  NaN  NaN    NaN    NaN           NaN   \n",
        "\n",
-       "     Number of SNPs  Length (KB) Gene(s) tagged  \n",
-       "0               NaN          NaN            NaN  \n",
-       "40             27.0       30.102          PLCH2  \n",
-       "1               NaN          NaN            NaN  \n",
-       "86             56.0      308.696  RERE, SLC45A1  \n",
-       "2               NaN          NaN            NaN  \n",
-       "..              ...          ...            ...  \n",
-       "60             51.0      169.801         NLGN4X  \n",
-       "166             NaN          NaN            NaN  \n",
-       "26              4.0        0.079           PJA1  \n",
-       "167             NaN          NaN            NaN  \n",
-       "168             NaN          NaN            NaN  \n",
+       "     Number of SNPs  Length (KB) Gene(s) tagged  -log p-value  \n",
+       "0               NaN          NaN            NaN           NaN  \n",
+       "40             27.0       30.102          PLCH2     11.171340  \n",
+       "1               NaN          NaN            NaN           NaN  \n",
+       "86             56.0      308.696  RERE, SLC45A1      8.485452  \n",
+       "2               NaN          NaN            NaN           NaN  \n",
+       "..              ...          ...            ...           ...  \n",
+       "60             51.0      169.801         NLGN4X      9.749580  \n",
+       "166             NaN          NaN            NaN           NaN  \n",
+       "26              4.0        0.079           PJA1     11.899629  \n",
+       "167             NaN          NaN            NaN           NaN  \n",
+       "168             NaN          NaN            NaN           NaN  \n",
        "\n",
-       "[314 rows x 14 columns]"
+       "[314 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "cgwas['-log p-value'] = - np.log10(cgwas.loc[:, 'P-value'])\n",
     "cgwas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "bedpath = '/home/attila/projects/bsm/resources/CLOZUK/gwas.bed'\n",
-    "cgwas[coord_cols + ['P-value']].to_csv(bedpath, sep='\\t', header=False, index=False, na_rep='NA')"
+    "cgwas[coord_cols + ['-log p-value']].to_csv(bedpath, sep='\\t', header=False, index=False, na_rep='0')"
    ]
   },
   {
