abstract for "chromatin state" notebook

--- a/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
+++ b/notebook/2020-06-10-chromatin-state/2020-06-10-chromatin-state.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exploratory analaysis of the filtered callsets.  We create a matrix whose rows are somatic SNVs.  Columns include: annotations from VCF files, clinical variables and variables specific to genomic regions. This latter class of variables contains information on chromatin state (from RoadMap Epigen Consortium), evolutionarily constrain, GWAS and CNV loci associated to schizophrenia..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -625,8 +632,8 @@
      "data": {
       "text/plain": [
        "(<Figure size 800x480 with 2 Axes>,\n",
-       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7fd7e8d3a2d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7fd7e448a150>],\n",
+       " array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f38ef655ed0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f38eb574290>],\n",
        "       dtype=object))"
       ]
      },
@@ -821,7 +828,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd7e4372290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f38eb45d410>"
       ]
      },
      "execution_count": 10,
@@ -1211,7 +1218,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd7e3baced0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f38e261add0>"
       ]
      },
      "execution_count": 22,
@@ -1858,7 +1865,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd7db185290>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f38e2242450>"
       ]
      },
      "execution_count": 27,
@@ -1892,13 +1899,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 40469,\n",
-      "  \"iopub_port\": 55633,\n",
-      "  \"stdin_port\": 42381,\n",
-      "  \"control_port\": 43763,\n",
-      "  \"hb_port\": 41489,\n",
+      "  \"shell_port\": 48799,\n",
+      "  \"iopub_port\": 54475,\n",
+      "  \"stdin_port\": 37553,\n",
+      "  \"control_port\": 39037,\n",
+      "  \"hb_port\": 57247,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"ee45d659-2ccd0dfd3efc86310c2fd999\",\n",
+      "  \"key\": \"1ca2144c-b2be52288344e4f7d77cc546\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1907,7 +1914,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-6b20be3f-4473-4984-a053-1bd269029207.json\n",
+      "    $> jupyter <app> --existing kernel-a4f46316-86df-4466-862a-420aefcc2581.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
