multiindex for calls DataFrame: indiv, chr, pos, mut

--- a/notebook/2020-08-07-cleaning-data/2020-08-07-cleaning-data.ipynb
+++ b/notebook/2020-08-07-cleaning-data/2020-08-07-cleaning-data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -29,12 +29,13 @@
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
-    "import individual_based_analysis as indba"
+    "import individual_based_analysis as indba\n",
+    "import patsy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
    ],
    "source": [
     "calls = readVCF.readVCFs()\n",
-    "calls = indba.clean_clinical(calls)"
+    "calls = indba.clean_clinical(calls, remove_ancestry=False)"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +72,14 @@
        "NEGATIVE_TRAIN_SITE    408\n",
        "POSITIVE_TRAIN_SITE    408\n",
        "DS                     410\n",
-       "END                    410\n",
        "ExcessHet              410\n",
        "InbreedingCoeff        410\n",
+       "END                    410\n",
        "RAW_MQandDP            410\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,45 +97,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['REF', 'ALT', 'QUAL', 'FILTER/PASS', 'FILTER/HC', 'FILTER/EXT', 'AC', 'AF', 'AN', 'BaseQRankSum', 'DP', 'FS', 'MLEAC', 'MLEAF', 'MQ', 'MQRankSum', 'QD', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'culprit', 'ChromatinState_DLPFC', 'szdbCNVcount', 'GWASpval', 'chromatinState_DLPFC', 'evolConstrain', 'Sample', 'Tissue', 'Ethnicity', 'AntipsychTyp', 'AntipsychAtyp', 'Alcohol', 'Genotyping_Sample_ID', 'Cluster', 'EV.1', 'EV.2', 'EV.3', 'EV.4', 'EV.5']\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "calls = calls.dropna(axis=1)"
+    "calls = calls.dropna(axis=1)\n",
+    "repr(list(calls.columns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following columns are redundant.  Remove them! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 56329,\n",
-      "  \"iopub_port\": 56345,\n",
-      "  \"stdin_port\": 54861,\n",
-      "  \"control_port\": 34795,\n",
-      "  \"hb_port\": 32837,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"448ee8ea-d94f3bf21f297b3471e5d2cf\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-686f21da-b9f9-417e-9beb-9a225e228d55.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "calls = calls.drop(columns=['ChromatinState_DLPFC', 'Genotyping_Sample_ID', 'Cluster'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Turn categorical to dummy variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calls.select_dtypes(include='object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%connect_info"
    ]
