counted variants in all NeuN_pl filtered callsets

--- a/notebook/2020-08-07-cleaning-data/2020-08-07-cleaning-data.ipynb
+++ b/notebook/2020-08-07-cleaning-data/2020-08-07-cleaning-data.ipynb
@@ -291,6 +291,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correlations between all variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -467,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +482,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 56329,\n",
-      "  \"iopub_port\": 56345,\n",
-      "  \"stdin_port\": 54861,\n",
-      "  \"control_port\": 34795,\n",
-      "  \"hb_port\": 32837,\n",
+      "  \"shell_port\": 52885,\n",
+      "  \"iopub_port\": 47993,\n",
+      "  \"stdin_port\": 39431,\n",
+      "  \"control_port\": 41825,\n",
+      "  \"hb_port\": 37493,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"448ee8ea-d94f3bf21f297b3471e5d2cf\",\n",
+      "  \"key\": \"f839c3e4-b2b2c65b6ac66311fe15ba1c\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -490,7 +497,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-686f21da-b9f9-417e-9beb-9a225e228d55.json\n",
+      "    $> jupyter <app> --existing kernel-318d187c-178f-4098-ab44-43d60b5920f6.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -500,6 +507,13 @@
    "source": [
     "%connect_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
