--- a/notebook/2020-08-05-cmc-clinical/2020-08-05-cmc-clinical.ipynb
+++ b/notebook/2020-08-05-cmc-clinical/2020-08-05-cmc-clinical.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome, Attila Jones!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "syn = synapseclient.login()\n",
     "wdir = '/big/results/bsm/2020-08-05-cmc-clinical'\n",
@@ -46,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116 samples from 95 individuals\n"
+     ]
+    }
+   ],
    "source": [
     "samples = pd.read_csv('/big/results/bsm/2020-05-18-processed-samples/all_samples.csv')\n",
     "individuals = list(set(samples['Individual ID']))\n",
@@ -58,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +167,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +224,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +274,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +400,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +442,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +502,7 @@
        "CMC_MSSM_213            Male  XXY"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +819,7 @@
        "[95 rows x 13 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +865,7 @@
        "'Dx ~ AntipsychAtyp + Alcohol + AntipsychTyp + Ethnicity + Institution + Benzodiazepines + ReportedGender + Antidepress + 1'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -868,10 +894,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   7.740</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 07 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>3.12e-08</td>\n",
+       "  <th>Date:</th>             <td>Tue, 11 Aug 2020</td> <th>  Prob (F-statistic):</th> <td>3.12e-08</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>00:41:57</td>     <th>  Log-Likelihood:    </th> <td> -31.750</td>\n",
+       "  <th>Time:</th>                 <td>18:39:39</td>     <th>  Log-Likelihood:    </th> <td> -31.750</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    95</td>      <th>  AIC:               </th> <td>   83.50</td>\n",
@@ -944,8 +970,8 @@
        "Dep. Variable:                     Dx   R-squared:                       0.450\n",
        "Model:                            OLS   Adj. R-squared:                  0.392\n",
        "Method:                 Least Squares   F-statistic:                     7.740\n",
-       "Date:                Fri, 07 Aug 2020   Prob (F-statistic):           3.12e-08\n",
-       "Time:                        00:41:57   Log-Likelihood:                -31.750\n",
+       "Date:                Tue, 11 Aug 2020   Prob (F-statistic):           3.12e-08\n",
+       "Time:                        18:39:39   Log-Likelihood:                -31.750\n",
        "No. Observations:                  95   AIC:                             83.50\n",
        "Df Residuals:                      85   BIC:                             109.0\n",
        "Df Model:                           9                                         \n",
@@ -975,7 +1001,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1039,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1069,7 @@
        "<Figure size 640x480 with 4 Axes>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1079,13 +1105,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 49943,\n",
-      "  \"iopub_port\": 34031,\n",
-      "  \"stdin_port\": 48645,\n",
-      "  \"control_port\": 50733,\n",
-      "  \"hb_port\": 49125,\n",
+      "  \"shell_port\": 43697,\n",
+      "  \"iopub_port\": 42265,\n",
+      "  \"stdin_port\": 56033,\n",
+      "  \"control_port\": 35647,\n",
+      "  \"hb_port\": 45391,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"000ec9cb-9279d05471374aecbf6ba259\",\n",
+      "  \"key\": \"823eacc8-d7f85067a9db163a477137cb\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1094,7 +1120,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-01ff38c7-6c42-440a-a85b-7e9f8b6af24c.json\n",
+      "    $> jupyter <app> --existing kernel-40cd646f-890d-4d2a-a45d-e9fb44165f1f.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
@@ -1104,6 +1130,13 @@
    "source": [
     "%connect_info"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
