towards autofiltering clinical data

--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -33,38 +33,27 @@
      "output_type": "stream",
      "text": [
       "Welcome, Attila Jones!\n",
-      "\n",
-      "ReadPosRankSum\n",
-      "EV_3\n"
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AF                      3301\n",
-       "ALT                     3301\n",
-       "BaseQRankSum            3301\n",
-       "DP                      3301\n",
-       "FILTER_PASS             3301\n",
-       "FS                      3301\n",
-       "GWASpval                3301\n",
-       "REF                     3301\n",
-       "ReadPosRankSum          3298\n",
-       "SOR                     3301\n",
-       "VQSLOD                  3301\n",
-       "chromatinState_DLPFC    3301\n",
-       "culprit                 3301\n",
-       "evolConstrain           3301\n",
-       "szdbCNVcount            3301\n",
-       "Dx                      3301\n",
-       "AntipsychAtyp           3301\n",
-       "AntipsychTyp            3301\n",
-       "Institution             3301\n",
-       "EV_3                    3301\n",
-       "dtype: int64"
+       "CHROM       3301\n",
+       "POS         3301\n",
+       "REF         3301\n",
+       "ALT         3301\n",
+       "QUAL        3301\n",
+       "            ... \n",
+       "EV_2        3154\n",
+       "EV_3        3154\n",
+       "EV_4        3154\n",
+       "EV_5        3154\n",
+       "Mutation    3301\n",
+       "Length: 126, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,10 +62,47 @@
     "v1 = ['AF', 'ALT', 'BaseQRankSum', 'DP', 'FILTER/PASS', 'FS', 'GWASpval', 'REF', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'chromatinState_DLPFC', 'culprit', 'evolConstrain', 'szdbCNVcount']\n",
     "v2 = ['Dx', 'AntipsychAtyp', 'AntipsychTyp', 'Institution', 'EV.3']\n",
     "calls = readVCF.readVCFs()\n",
-    "calls = clean.prettify_colnames(clean.preselect(calls, vnames=v1 + v2))\n",
+    "calls = clean.prettify_colnames(calls)\n",
+    "#calls = clean.prettify_colnames(clean.preselect(calls, vnames=v1 + v2))\n",
     "calls = clean.dummify_var(calls, vname='Dx')\n",
-    "calls = clean.impute_vars(calls, vnames=['ReadPosRankSum', 'EV_3'], v1=v1, v2=v2)\n",
+    "#calls = clean.impute_vars(calls, vnames=['ReadPosRankSum', 'EV_3'], v1=v1, v2=v2)\n",
     "calls.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"shell_port\": 59457,\n",
+      "  \"iopub_port\": 44589,\n",
+      "  \"stdin_port\": 58501,\n",
+      "  \"control_port\": 46721,\n",
+      "  \"hb_port\": 49643,\n",
+      "  \"ip\": \"127.0.0.1\",\n",
+      "  \"key\": \"1c5afd4c-0a2747ed6e8a0ab06497ccd0\",\n",
+      "  \"transport\": \"tcp\",\n",
+      "  \"signature_scheme\": \"hmac-sha256\",\n",
+      "  \"kernel_name\": \"\"\n",
+      "}\n",
+      "\n",
+      "Paste the above JSON into a file, and connect with:\n",
+      "    $> jupyter <app> --existing <file>\n",
+      "or, if you are local, you can connect with just:\n",
+      "    $> jupyter <app> --existing kernel-d0abaac7-ba87-4b77-84f0-1c17c456bb83.json\n",
+      "or even just:\n",
+      "    $> jupyter <app> --existing\n",
+      "if this is the most recent Jupyter kernel you have started.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%connect_info"
    ]
   },
   {
