--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
     "%reload_ext autoreload\n",
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
-    "from bsm import clean\n",
+    "from bsm import individuals\n",
     "from bsm import readVCF\n",
     "import statsmodels as sm"
    ]
