Cleaned up bsm code; get_data main function

--- a/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
+++ b/notebook/2020-08-19-indiv-based-analysis/2020-08-19-indiv-based-analysis.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,53 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome, Attila Jones!\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CHROM       3301\n",
-       "POS         3301\n",
-       "REF         3301\n",
-       "ALT         3301\n",
-       "QUAL        3301\n",
-       "            ... \n",
-       "EV_2        3154\n",
-       "EV_3        3154\n",
-       "EV_4        3154\n",
-       "EV_5        3154\n",
-       "Mutation    3301\n",
-       "Length: 126, dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "v1 = ['AF', 'ALT', 'BaseQRankSum', 'DP', 'FILTER/PASS', 'FS', 'GWASpval', 'REF', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'chromatinState_DLPFC', 'culprit', 'evolConstrain', 'szdbCNVcount']\n",
-    "v2 = ['Dx', 'AntipsychAtyp', 'AntipsychTyp', 'Institution', 'EV.3']\n",
-    "calls = readVCF.readVCFs()\n",
-    "calls = clean.prettify_colnames(calls)\n",
-    "#calls = clean.prettify_colnames(clean.preselect(calls, vnames=v1 + v2))\n",
-    "calls = clean.dummify_var(calls, vname='Dx')\n",
-    "#calls = clean.impute_vars(calls, vnames=['ReadPosRankSum', 'EV_3'], v1=v1, v2=v2)\n",
-    "calls.count()"
+    "calls, clin = individuals.get_data(merge=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
