--- a/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
+++ b/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
@@ -9,20 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%reload_ext autoreload\n",
-    "import readVCF\n",
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
-    "from bsm import clean\n",
+    "from bsm import individuals\n",
     "import fwsel\n",
     "import statsmodels as sm\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = individuals.get_data(merge=True)"
    ]
   },
   {
@@ -1036,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1044,13 +1061,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 60593,\n",
-      "  \"iopub_port\": 55433,\n",
-      "  \"stdin_port\": 43813,\n",
-      "  \"control_port\": 43199,\n",
-      "  \"hb_port\": 33359,\n",
+      "  \"shell_port\": 46655,\n",
+      "  \"iopub_port\": 60651,\n",
+      "  \"stdin_port\": 49497,\n",
+      "  \"control_port\": 43681,\n",
+      "  \"hb_port\": 35693,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"f37b89d2-aa014a0056da6fa19b321024\",\n",
+      "  \"key\": \"c2cb6335-4af83cd3b5fdf569c75b9057\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1059,7 +1076,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-754767ab-9156-48c0-9945-6a7f5127cac3.json\n",
+      "    $> jupyter <app> --existing kernel-1e3adde5-ca7a-49e6-8e36-485cc8158534.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
