Imputation and categorical vars

--- a/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
+++ b/notebook/2020-08-13-select-vars/2020-08-13-select-vars.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
     "from bsm import individuals\n",
+    "from bsm import preprocessing\n",
     "import fwsel\n",
     "import statsmodels as sm\n",
     "%matplotlib inline"
@@ -35,48 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = individuals.get_data(merge=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome, Attila Jones!\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "calls = readVCF.readVCFs()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Filtering\n",
-    "\n",
-    "We filter for the set of variables below and remove all other variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v1 = ['AF', 'ALT', 'BaseQRankSum', 'DP', 'FILTER/PASS', 'FS', 'GWASpval', 'REF', 'ReadPosRankSum', 'SOR', 'VQSLOD', 'chromatinState_DLPFC', 'culprit', 'evolConstrain', 'szdbCNVcount']\n",
-    "v2 = ['Dx', 'AntipsychAtyp', 'AntipsychTyp', 'Institution', 'EV.3']"
+    "calls, clin = individuals.get_data(merge=False)"
    ]
   },
   {
@@ -84,48 +48,6 @@
    "metadata": {},
    "source": [
     "The following operations perform the filtering and also prettify variable names (replace whitespace and `./\\:` characters with `_`)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AF                      3301\n",
-       "ALT                     3301\n",
-       "BaseQRankSum            3301\n",
-       "DP                      3301\n",
-       "FILTER_PASS             3301\n",
-       "FS                      3301\n",
-       "GWASpval                3301\n",
-       "REF                     3301\n",
-       "ReadPosRankSum          3298\n",
-       "SOR                     3301\n",
-       "VQSLOD                  3301\n",
-       "chromatinState_DLPFC    3301\n",
-       "culprit                 3301\n",
-       "evolConstrain           3301\n",
-       "szdbCNVcount            3301\n",
-       "Dx                      3301\n",
-       "AntipsychAtyp           3301\n",
-       "AntipsychTyp            3301\n",
-       "Institution             3301\n",
-       "EV_3                    3154\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calls = clean.prettify_colnames(clean.preselect(calls, vnames=v1 + v2))\n",
-    "calls = clean.dummify_var(calls, vname='Dx')\n",
-    "calls.count()"
    ]
   },
   {
@@ -1053,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
